--- a/rapport.htm
+++ b/rapport.htm
@@ -91,16 +91,16 @@
     <h2>
         Hypothèses</h2>
     <p>
-        Nous avons supposé que le système serait constitué d'une interface interagissant avec l'usager (client ou admin) pour accéder à une base 
-        de données.        
-        Nous avons supposé que chaque distributeur a au moins un véhicule de transport (avion, train ou paquebot) dans sa flotte.        
-        Nous avons supposé que toute section d'un véhicule de transport est non-vide. 
-        Nous avons supposé qu'il n'y a qu'un seul véhicule de transport effectuant un certain voyage à une certaine heure (exemple, le vol LEET1337, disponible à 13h, 16h, et 22h est effectué par l'avion GIT1 à 13h, GUD2 à 16h et SCRUB3 à 22h).
-        Nous avons supposé que le système limite le nombre de réservations non payées à une par client.
-        Étant donné que ce n'était pas spécifié, nous avons assumé qu'un client a jusqu'à 24h avant le départ pour réserver une place dans un voyage.
-        Nous avons supposé que, comme tout bon système de réservation/achat en ligne, que le client peut utiliser le système et réserver/payer une place sans s'authentifier ou s'inscrire.
-        Nous avons supposé que l'administrateur doit s'authentifer pour avoir accès aux fonction d'administration et que seul l'administrateur peut avoir accès aux fonctions d'administration (création/modification/suppression de destination, distributeurs, itinéraires).
-        Il est à noter que nnotre design suppose que le logiciel finale utilisera le casting pour réutiliser certaines classes/méthodes facilement.
+    <p>Nous avons supposé que le système serait constitué d'une interface interagissant avec l'usager (client ou admin) pour accéder à une base 
+        de données.</p>        
+    <p>Nous avons supposé que chaque distributeur a au moins un véhicule de transport (avion, train ou paquebot) dans sa flotte.</p>        
+    <p>Nous avons supposé que toute section d'un véhicule de transport est non-vide.</p> 
+    <p>Nous avons supposé qu'un certain voyage à une certaine heure est effectué par un seul transporteur(exemple, le vol LEET1337, disponible à 13h, 16h, et 22h est effectué par l'avion GIT1 à 13h, GUD2 à 16h et SCRUB3 à 22h).</p>
+    <p>Nous avons supposé que le système limite le nombre de réservations non payées à une par client.</p>
+    <p>Étant donné que ce n'était pas spécifié, nous avons assumé qu'un client a jusqu'à 24h avant le départ pour réserver une place dans un voyage.</p>
+    <p>Nous avons supposé que, comme tout bon système de réservation/achat en ligne, que le client peut utiliser le système et réserver/payer une place sans s'authentifier ou s'inscrire.</p>
+    <p>Nous avons supposé que l'administrateur doit s'authentifer pour avoir accès aux fonction d'administration et que seul l'administrateur peut avoir accès aux fonctions d'administration (création/modification/suppression de destination, distributeurs, itinéraires).</p>
+    <p>Il est à noter que notre design suppose que le logiciel final aura l'option d'utiliser le casting pour réutiliser certaines classes/méthodes facilement.
     </p>
     <h2>
         Tâche 1</h2>
